BROOKLYN-282: don’t log passwords (#1)
Also refactors EffectorUtils.prepareArgsForEffector (deprecating old
method), and updates how MethodEffector calls it so we have the
parameter names.